# ffi-demo

./: .gitmodules  Cargo.toml  Makefile  bindings.h  build.rs
examples/: main.dart  main.py
examples/hello-from-c/: run.sh
examples/hello-from-rs/: run.sh
examples/wasm-test/: main.mjs  package-lock.json  package.json
src/: bindings.rs  cbindgen.rs  lib.rs
src/jieba/: mod.rs  raw.rs
src/snappy/: mod.rs
