[package]
name = "ffi-demo"
version = "0.1.0"
edition = "2021"

[features]
default = []
jieba = []
# https://github.com/google/snappy
snappy = []
bindgen = []

[dependencies]
cfg-if = "1.0.0"
# 底层C的libc库的封装(不完全等价)
libc = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"

[build-dependencies]
cmake = "0.1"

# 自动为 C（或 C++）库生成 Rust 绑定的辅助库和命令行工具
bindgen = "0.69"

# [target.'cfg(...)'.lib](https://github.com/rust-lang/cargo/issues/12260)
[lib]
crate-type = ["cdylib", "rlib"]
